# coursework1_skypro

./: .env_template  README.md  pyproject.toml
data/: operations.xls
src/: main.py  reports.py  services.py  utils.py  views.py
tests/: test_reports.py  test_services.py  test_views.py
